use temporary my branch for rstest, where I force ignoring folders. And few more test deps

--- a/ft_lex_lib/Cargo.toml
+++ b/ft_lex_lib/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2024"
 [dev-dependencies]
 insta = { version = "1.42.2", features = ["yaml"] }
 serde = { version = "1.0.219", features = ["derive"] }
-rstest = "0.25.0"
+
+regex = "1.11.1"
+lazy_static = "1.5.0"
+
+#rstest = "0.25.0"
+rstest = {git = "https://github.com/Obito-git/rstest.git", branch = "306_ignore_folders"}
