--- a/regex/Cargo.toml
+++ b/regex/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dev-dependencies]
 rstest = "0.25.0"
+lazy_static = "1.5.0"
 insta = { version = "1.42.2", features = ["yaml"] }
 serde = { version = "1.0.219", features = ["derive"] }
